(rule
 (targets parser.ml parser.mli)
 (deps    parser.mly)
 (action  (chdir %{workspace_root}
           (run %{bin:menhir} --table --base text/parser %{deps} %{lib:wasm:parser.mly}))))

(rule
 (target lexer.ml)
 ; NOTE(dbp 2021-10-12): I don't know of a way to depend on a package...
 ; (deps   lexer.mll)
 (deps   lexer.mli)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -ml -q -o %{target} %{lib:wasm:lexer.mll}))))
